[package]
name = "gamejam-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12" }
bevy_rapier2d = "0.23.0"
bevy_turborand = "0.7.0"
leafwing-input-manager = "0.11.1"


[target.'cfg(unix)'.dependencies]
bevy = { version = "0.12", features = ["dynamic_linking", "wayland"] }

[target.'cfg(target_arch="wasm32")'.dependencies]
bevy = { version = "0.12" }
wasm-bindgen = "*"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
